objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Article_URL__c</fullName>
        <label>Article URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Article_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KnowledgeArticleId__c</fullName>
        <label>KnowledgeArticleId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>Community_Feedback_Feedback</fullName>
        <filterScope>Queue</filterScope>
        <label>Community Feedback</label>
        <queue>Community_Feedback</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>